<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_clock"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
