<resources>
    <string name="app_name">Mi Pista</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps_error_message">Click OK to Enable location services.</string>
    <string name="data_error_message">Data service not available Locations will be stored as unknown</string>
    <string name="connection_suspended">Connection to service stopped try again</string>
    <string name="connection_failed">Connection to service failed try again</string>
</resources>
