<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="CANCEL"
            android:id="@+id/cancel"
            android:theme="@style/RedButton"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/okay"
            android:theme="@style/RedButton"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
